--- a/styleCurriculo.css
+++ b/styleCurriculo.css
@@ -32,6 +32,10 @@ p{
     top:15px;
     float: right;
     transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -ms-transform: rotate(270deg); /* IE 9 */
+    -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+    transform: rotate(270deg);
     border: solid 3px #b3b3b3;
     padding: 1px;
 }
