--- a/styleCurriculo.css
+++ b/styleCurriculo.css
@@ -25,6 +25,13 @@ ul{
 p{
     margin: 15px 0 30px 50px;
 }
+a{
+    color: gray;
+    text-decoration: none;
+}
+a:hover{
+    color: #06c;
+}
 .foto1{
     width: 200px;
     height: 200px;
@@ -44,3 +51,4 @@ p{
     font-size: 300; 
     color: #3b3b3b;
 }
+
