--- a/styleCurriculo.css
+++ b/styleCurriculo.css
@@ -1,54 +1,66 @@
 body{
-    position: absolute;
-    width: 90%; 
-    min-width: 750px;
-    margin: 40px;
-    background: #dcdcdc;
+  position: absolute;
+  width: 90%; 
+  min-width: 750px;
+  margin: 40px;
+  background: #dcdcdc;
 }
+
 h1{
-    margin: 0 0 0 20px;
-    font-size: 700;
-    font-family: 'Roboto Slab', serif;
-    top: 15px;
-    /*text-shadow: -2px -2px 2px #000;*/  
-} 
+  margin: 0 0 0 20px;
+  font-size: 700;
+  font-family: 'Roboto Slab', serif;
+  top: 15px;
+}
+
 h2{
-    margin: 3px 0 0 20px;
-    border-bottom: 3px;
-    font-size: 400;
-    font-family: 'Roboto Slab', serif;
+  margin: 3px 0 0 20px;
+  border-bottom: 3px;
+  font-size: 400;
+  font-family: 'Roboto Slab', serif;
 }
+
 ul{
-    margin: 15px 0 30px 30px;
-    list-style: circle;
+  margin: 15px 0 30px 30px;
+  list-style: circle;
 }
+
 p{
-    margin: 15px 0 30px 50px;
+  margin: 15px 0 30px 50px;
 }
+
 a{
-    color: gray;
-    text-decoration: none;
+  font-weight: bold;
+  color: gray;
+  text-decoration: none;
 }
+
 a:hover{
-    color: #06c;
+  color: #06c;
 }
-.foto1{
-    width: 200px;
-    height: 200px;
-    position: relative;
-    top:15px;
-    float: right;
-    transform: rotate(270deg);
-    -moz-transform: rotate(270deg);
-    -ms-transform: rotate(270deg); /* IE 9 */
-    -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
-    transform: rotate(270deg);
-    border: solid 3px #b3b3b3;
-    padding: 1px;
+
+.profile-photo{
+  width: 200px;
+  height: 200px;
+  position: relative;
+  top:15px;
+  float: right;
+  transform: rotate(270deg);
+  -moz-transform: rotate(270deg);
+  -ms-transform: rotate(270deg); /* IE 9 */
+  -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+  transform: rotate(270deg);
+  border: solid 3px #b3b3b3;
+  padding: 1px;
 }
+
+.identified {
+  margin-left: 20px;  
+}
+
 #text {
-    font-family: 'Overpass', sans-serif;
-    font-size: 300; 
-    color: #3b3b3b;
+  font-family: 'Overpass', sans-serif;
+  font-size: 300; 
+  color: #3b3b3b;
 }
 
