feat: update name
chore: update index.html indentation, title

--- a/styleCurriculo.css
+++ b/styleCurriculo.css
@@ -35,6 +35,10 @@ a:focus {
   color: #06c;
 }
 
+.top {
+  margin-left: 20px;
+}
+
 .container-fluid {
   max-width: 750px;
   align-items: center;
